third_party/move/move-compiler-v2/tests/more-v1/parser/byte_string_invalid_escaped_sequence.exp

Diagnostics:
error: invalid byte string
  ┌─ tests/more-v1/parser/byte_string_invalid_escaped_sequence.move:3:15
  │
3 │         b"libr\a"
  │               ^^ Invalid escape sequence: '\a'
